force-app/main/default/objects/Contact/fields/Contractor_Status__c.field-meta.xml
<CustomField>
    <fullName>Contractor_Status__c</fullName>
    <label>Contractor Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Sourced</fullName>
            </value>
            <value>
                <fullName>Vetted</fullName>
            </value>
            <value>
                <fullName>Submitted</fullName>
            </value>
            <value>
                <fullName>Interviewing</fullName>
            </value>
            <value>
                <fullName>Active</fullName>
            </value>
            <value>
                <fullName>Inactive</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>