force-app/main/default/objects/Contact/fields/Default_Cost_Rate__c.field-meta.xml
<CustomField>
    <fullName>Default_Cost_Rate__c</fullName>
    <label>Default Cost Rate</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>