force-app/main/default/objects/Contact/fields/Primary_Skill_Area__c.field-meta.xml
<CustomField>
    <fullName>Primary_Skill_Area__c</fullName>
    <label>Primary Skill Area</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Data Cloud</fullName>
            </value>
            <value>
                <fullName>Salesforce Developer</fullName>
            </value>
            <value>
                <fullName>Solution Architect</fullName>
            </value>
            <value>
                <fullName>Marketing Cloud</fullName>
            </value>
            <value>
                <fullName>Integration</fullName>
            </value>
            <value>
                <fullName>AI / Automation</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>