force-app/main/default/objects/Contact/fields/Timezone__c.field-meta.xml
<CustomField>
    <fullName>Timezone__c</fullName>
    <label>Timezone</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Eastern (ET)</fullName>
            </value>
            <value>
                <fullName>Central (CT)</fullName>
            </value>
            <value>
                <fullName>Mountain (MT)</fullName>
            </value>
            <value>
                <fullName>Pacific (PT)</fullName>
            </value>
            <value>
                <fullName>International</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>