force-app/main/default/objects/Contact/fields/Work_Authorization__c.field-meta.xml
<CustomField>
    <fullName>Work_Authorization__c</fullName>
    <label>Work Authorization</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>US Citizen</fullName>
            </value>
            <value>
                <fullName>Green Card</fullName>
            </value>
            <value>
                <fullName>Work Visa</fullName>
            </value>
            <value>
                <fullName>No US Authorization</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>