force-app/main/default/objects/Contact/recordTypes/Client_Contact.recordType-meta.xml
<RecordType>
    <fullName>Client_Contact</fullName>
    <active>true</active>
    <description>Client-side contacts, stakeholders, and decision makers</description>
    <label>Client Contact</label>
</RecordType>