force-app/main/default/objects/Contact/recordTypes/Contractor.recordType-meta.xml
<RecordType>
    <fullName>Contractor</fullName>
    <active>true</active>
    <description>Contractors and independent consultants available for client engagements</description>
    <label>Contractor</label>
</RecordType>